--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && mv build docs",
+    "build": "react-scripts build && rmdir docs && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
